# bert.cpp

./: .gitignore  CMakeLists.txt  README.md  bert.cpp  bert.h  requirements.txt
benchmarks/: README.md  print_tables.py  requirements.txt  run_mteb.py  run_mteb_server.py
benchmarks/results/all-MiniLM-L12-v2_f16/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L12-v2_f32/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L12-v2_q4_0/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L12-v2_q4_1/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L12-v2_sbert/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L12-v2_sbert-batchless/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_f16/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_f32/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_q4_0/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_q4_1/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_sbert/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_sbert-batchless/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/bert-base-uncased_f16/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/bert-base-uncased_f32/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/bert-base-uncased_q4_0/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/bert-base-uncased_q4_1/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/bert-base-uncased_sbert/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/bert-base-uncased_sbert-batchless/: EmotionClassification.json  STSBenchmark.json
examples/: CMakeLists.txt  a.out  dylib.cpp  main.cpp  sample_client.py  sample_client_texts.txt  sample_dylib.py  server.cpp  test_tokenizer.cpp
include_win/: getopt.h  unistd.h
models/: CMakeLists.txt  convert-to-ggml.py  download-ggml-model.sh  download-ggml.py  quantize.cpp  run_conversions.sh  upload-to-hf.py
