if (MSVC)
    if (BERT_AVX2)
        add_compile_options(/arch:AVX2)
    elseif (BERT_AVX)
        add_compile_options(/arch:AVX)
    endif()
endif()

if(WIN32)
add_definitions(-DNOMINMAX=1)
endif()
if(NOT WIN32)
add_executable(server server.cpp)
target_link_libraries(server PRIVATE bert ggml)
endif()
add_executable(main main.cpp)
target_link_libraries(main PRIVATE bert ggml)

add_executable(test_tokenizer test_tokenizer.cpp)
target_link_libraries(test_tokenizer PRIVATE bert ggml)